# consumer-dispute-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: disputes_latest.json  disputes_latest.xlsx  disputes_viewer.html
scripts/: fetch_law.py
src/consumer_dispute_mcp/: __init__.py  models.py  parser.py  server.py  updater.py
tests/: test_parser.py
